// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a=!b; 1`] = `
"digraph {
node [shape=box style=filled]
graph [rankdir=\\"LR\\"]
var_0 [label=\\"b\\"]
not_1 [label=\\"not\\"]
var_0 -> not_1
}"
`;

exports[`a=2+(b); 1`] = `
"digraph {
node [shape=box style=filled]
graph [rankdir=\\"LR\\"]
const_0 [label=\\"2\\"]
var_1 [label=\\"b\\"]
sum_2 [label=\\"+\\\\n+\\"]
const_0 -> sum_2
var_1 -> sum_2
}"
`;

exports[`a=2+b; 1`] = `
"digraph {
node [shape=box style=filled]
graph [rankdir=\\"LR\\"]
const_0 [label=\\"2\\"]
var_1 [label=\\"b\\"]
sum_2 [label=\\"+\\\\n+\\"]
const_0 -> sum_2
var_1 -> sum_2
}"
`;

exports[`b=12;if(a==2) {c=b+34;} else {c=5678;} 1`] = `
"digraph {
node [shape=box style=filled]
graph [rankdir=\\"LR\\"]
const_0 [label=\\"12\\"]
const_1 [label=\\"34\\"]
sum_2 [label=\\"+\\\\n+\\"]
var_3 [label=\\"a\\"]
const_4 [label=\\"2\\"]
relational_5 [label=\\"==\\"]
const_6 [label=\\"5678\\"]
switch_7 [label=\\"1\\\\ncond\\\\n2\\"]
const_0 -> sum_2
const_1 -> sum_2
var_3 -> relational_5
const_4 -> relational_5
sum_2 -> switch_7
relational_5 -> switch_7
const_6 -> switch_7
}"
`;

exports[`if(b==2) {a=2;} else {if(b==1) {a=1;} else {a=0;}} 1`] = `
"digraph {
node [shape=box style=filled]
graph [rankdir=\\"LR\\"]
const_0 [label=\\"2\\"]
var_1 [label=\\"b\\"]
const_2 [label=\\"2\\"]
relational_3 [label=\\"==\\"]
var_4 [label=\\"a\\"]
switch_5 [label=\\"1\\\\ncond\\\\n2\\"]
var_1 -> relational_3
const_2 -> relational_3
const_0 -> switch_5
relational_3 -> switch_5
var_4 -> switch_5
}"
`;

exports[`if(b==2) {b=10;} else {b=2*b;} 1`] = `
"digraph {
node [shape=box style=filled]
graph [rankdir=\\"LR\\"]
const_0 [label=\\"10\\"]
var_1 [label=\\"b\\"]
const_2 [label=\\"2\\"]
relational_3 [label=\\"==\\"]
const_4 [label=\\"2\\"]
multiply_5 [label=\\"*\\\\n*\\"]
switch_6 [label=\\"1\\\\ncond\\\\n2\\"]
var_1 -> relational_3
const_2 -> relational_3
const_4 -> multiply_5
var_1 -> multiply_5
const_0 -> switch_6
relational_3 -> switch_6
multiply_5 -> switch_6
}"
`;
